--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -2,7 +2,7 @@
 import { SITE_BASE } from '@/consts'
 import FormattedDate from './FormattedDate.astro'
 import type { ImageMetadata } from 'astro'
-import { Image } from 'astro:assets'
+import { Picture } from 'astro:assets'
 import { type Lang } from '@/i18n'
 
 const { post } = Astro.props
@@ -24,12 +24,18 @@ const coverImagePath = `/src/assets/blogimages/${post.data.pubId}/cover.jpg`
 >
 	{
 		blogImages[coverImagePath] && (
-			<Image
-				src={blogImages[coverImagePath]()}
-				alt={post.data.title}
-				class="aspect-video rounded-xl object-cover"
-				transition:name={`blog-cover-${post.data.pubId}`}
-			/>
+			<div class="relative">
+				<Picture
+					src={blogImages[coverImagePath]()}
+					alt={post.data.title}
+					widths={[280, 400, 565]}
+					formats={['avif', 'webp', 'jpg']}
+					priority
+					layout="constrained"
+					class="relative aspect-video rounded-xl object-cover"
+					transition:name={`blog-cover-${post.data.pubId}`}
+				/>
+			</div>
 		)
 	}
 	<h3
