--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -24,7 +24,7 @@ const coverImagePath = `/src/assets/blogimages/${post.data.pubId}/cover.jpg`
 >
 	{
 		blogImages[coverImagePath] && (
-			<div class="relative">
+			<div class="relative overflow-hidden rounded-xl">
 				<Picture
 					src={blogImages[coverImagePath]()}
 					alt={post.data.title}
@@ -32,7 +32,7 @@ const coverImagePath = `/src/assets/blogimages/${post.data.pubId}/cover.jpg`
 					formats={['avif', 'webp', 'jpg']}
 					priority
 					layout="constrained"
-					class="relative aspect-video rounded-xl object-cover"
+					class="relative aspect-video object-cover transition-transform duration-200 group-hover:scale-110"
 					transition:name={`blog-cover-${post.data.pubId}`}
 				/>
 			</div>
