--- a/src/components/TranslateToggle.astro
+++ b/src/components/TranslateToggle.astro
@@ -41,13 +41,18 @@ const { pubId } = Astro.props
 						<a
 							class="group item-center flex gap-1"
 							href={`/${lang}/posts/${postPath}`}
+							aria-label={t({
+								es: `Traducir al ${config.label}`,
+								gl: `Traducir ao ${config.label}`,
+								en: `Translate to ${config.label}`,
+							})}
 							data-umami-event={`Locale Change`}
 							data-umami-event-lang-to={lang}
 							data-umami-event-lang-from={Astro.currentLocale}
 							data-umami-event-source={pubId}
 						>
 							<span>{config.emogi}</span>
-							<span class="decoration-accent dark:decoration-accent-dark decoration-wavy group-hover:underline">
+							<span class="decoration-accent dark:decoration-accent-dark hidden decoration-wavy group-hover:underline md:hidden lg:inline">
 								{config.label}
 							</span>
 						</a>
