--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -38,7 +38,7 @@ const animationTexts = JSON.stringify([
 ---
 
 <h1
-	class="blog-title font-serif text-8xl leading-none font-bold"
+	class="blog-title decoration-primary dark:decoration-primary-dark font-serif text-8xl leading-none font-bold underline decoration-wavy"
 	data-animation-texts={animationTexts}
 >
 	{
@@ -106,6 +106,7 @@ const animationTexts = JSON.stringify([
 					setTimeout(() => {
 						if (h1Element) {
 							h1Element.innerHTML = text
+							h1Element.classList.add('underline')
 						}
 						if (fnCallback) {
 							fnCallback()
@@ -126,6 +127,10 @@ const animationTexts = JSON.stringify([
 			}
 			// check if dataText[i] exists
 			if (i < dataText.length && typeof dataText[i] !== 'undefined') {
+				// Remove underline class on first animation
+				if (i === 0 && h1Element) {
+					h1Element.classList.remove('underline')
+				}
 				// check if this is the last text in the array
 				const isLastText = i === dataText.length - 1
 				// text exists! start typewriter animation
