fix: navbar classes

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -53,7 +53,7 @@ const locale = Astro.currentLocale as Lang
 
 			<!-- Mobile nav -->
 			<div
-				class="bg-background dark:bg-background-dark border-background fixed top-0 right-0 z-40 h-screen w-5/6 translate-x-full border-l-[1px] px-8 py-6 transition-transform md:hidden"
+				class="bg-background dark:bg-background-dark border-background fixed top-0 right-0 z-40 h-screen w-5/6 translate-x-full border-l px-8 py-6 transition-transform md:hidden"
 				id="mobile-menu"
 				data-umami-event="Open Mobile nav"
 			>
