feat: change Open Graph Logic

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -30,7 +30,7 @@ const localeKeywords = keywords
 	: t(SITE_KEYWORDS)
 const ogImage = image
 	? `${SITE_BASE}/open-graph/${image}.png`
-	: `${SITE_BASE}/og-${locale}.png`
+	: `${SITE_BASE}/open-graph/${locale}/og.png`
 ---
 
 <!-- Global Metadata -->
