--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,7 +7,7 @@ import ProgressBar from './ProgressBar.astro'
 import { SITE_BASE, WebsiteLinks } from '@/consts'
 import LogoSVG from '@/assets/logo.svg'
 import { type Lang } from '@/i18n'
-const isPost = /^\/[^/]+\/posts\//.test(Astro.url.pathname)
+const isPost = /^\/[^/]+\/posts\/.+/.test(Astro.url.pathname)
 const locale = Astro.currentLocale as Lang
 ---
 
