fix: change image format to reduce og file size on articles

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -29,7 +29,7 @@ const localeKeywords = keywords
 	? `${t(SITE_KEYWORDS)}, ${keywords}`
 	: t(SITE_KEYWORDS)
 const ogImage = image
-	? `${SITE_BASE}/open-graph/${image}.png`
+	? `${SITE_BASE}/open-graph/${image}.jpg`
 	: `${SITE_BASE}/open-graph/${locale}/og.png`
 ---
 
