--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ const defaultLocale = DEFAULT_LOCALE
 		<meta property="og:url" content={Astro.url} />
 		<meta property="og:locale" content={DEFAULT_LOCALE} />
 		<meta name="twitter:card" content="summary" />
-		<meta name="twitter:site" content={t(X_ACCOUNT)} />
+		<meta name="twitter:site" content={`@${t(X_ACCOUNT)}`} />
 
 		<noscript>
 			<meta
