fix: Giscus Comment Section Rerun

--- a/src/components/CommentSection.astro
+++ b/src/components/CommentSection.astro
@@ -33,6 +33,7 @@ const { title } = Astro.props
 <div>
 	<script
 		is:inline
+		data-astro-rerun
 		src="https://giscus.pablopl.dev/client.js"
 		data-repo="TeenBiscuits/Blog"
 		data-repo-id="R_kgDOQBB9kg"
