feat: add url to Download Resume Link

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -147,6 +147,7 @@ const newArtDate = blog.reduce(
 				<a
 					class="btn-secondary"
 					data-umami-event="Download Resume Hero Link"
+					data-umami-event-url={`https://cv.pablopl.dev/${locale}/`}
 					href={`https://cv.pablopl.dev/${locale}/`}
 					target="_blank"
 					>{
