fix: rel property on social links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -46,8 +46,7 @@ const today = new Date()
 								class="decoration-secondary dark:decoration-secondary-dark text-lg decoration-wavy underline-offset-2 hover:underline"
 								href={link.url}
 								target="_blank"
-								rel="noopener noreferrer me"
-								rel="nofollow"
+								rel="nofollow noopener noreferrer me"
 								data-umami-event="Social Footer Link"
 								data-umami-event-url={link.url}
 							>
