--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -52,7 +52,7 @@ const { Content } = await render(aboutContent!)
 								aria-label={link.name}
 								data-umami-event="Social About Link"
 								data-umami-event-url={link.url}
-								rel="noopener noreferrer me"
+								rel="nofollow noopener noreferrer me"
 								target="_blank"
 							>
 								<Icon
@@ -98,7 +98,7 @@ const { Content } = await render(aboutContent!)
 								aria-label={link.name}
 								data-umami-event="Social About Link"
 								data-umami-event-url={link.url}
-								rel="noopener noreferrer me"
+								rel="nofollow noopener noreferrer me"
 								target="_blank"
 							>
 								<Icon
