feat: add meta titles and descriptions on missing pages

--- a/src/pages/[lang]/404.astro
+++ b/src/pages/[lang]/404.astro
@@ -11,7 +11,7 @@ export const getStaticPaths = () =>
 	}))
 ---
 
-<Layout>
+<Layout title="404">
 	<div>
 		<main
 			class="app-container flex h-[95vh] flex-col items-center justify-center gap-6 py-56"
