--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -105,9 +105,9 @@ const newArtDate = blog.reduce(
 			<p class="max-w-xl pb-4 text-lg">
 				{
 					t({
-						es: "Un hombre apasionado, hablo mucho, me gusta conocer a la gente, me gusta recorrer este planeta y, sobre todo, me gusta tratar de entenderlo.",
-						gl: "Un home apaixonado, falo moito, gústame coñecer xente, gústame viaxar por este planeta e, sobre todo, gústame intentar comprendelo.",
-						en: "A passionate man, I talk a lot, I like meeting people, I like traveling this planet and, above all, I like trying to understand it.",
+						es: 'Un hombre apasionado, hablo mucho, me gusta conocer a la gente, me gusta recorrer este planeta y, sobre todo, me gusta tratar de entenderlo.',
+						gl: 'Un home apaixonado, falo moito, gústame coñecer xente, gústame viaxar por este planeta e, sobre todo, gústame intentar comprendelo.',
+						en: 'A passionate man, I talk a lot, I like meeting people, I like traveling this planet and, above all, I like trying to understand it.',
 					})
 				}
 			</p>
