feat: add umami track event to transalate toogle

--- a/src/components/TranslateToggle.astro
+++ b/src/components/TranslateToggle.astro
@@ -63,6 +63,7 @@ const { pubId } = Astro.props
 		document
 			.getElementById('translate-toggle')
 			?.addEventListener('click', () => {
+				window.umami!.track('translate-toogle-click')
 				const links = document.getElementById('language-links')
 				const toggle = document.getElementById('translate-toggle')
 				if (links && toggle) {
