--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,13 +1,10 @@
 ---
-import {
-	SITE_BASE,
-	SITE_TITLE,
-	SITE_DESCRIPTION,
-	SITE_KEYWORDS,
-	X_ACCOUNT,
-} from '@/consts'
-import { useTranslations, LOCALES, getLocalePaths, type Lang } from '@/i18n'
+import { SITE_TITLE } from '@/consts'
+import { useTranslations, type Lang } from '@/i18n'
 const t = useTranslations(Astro.currentLocale as Lang)
+import Favicons from '@/components/Favicons.astro'
+import OpenGraph from '@/components/OpenGraph.astro'
+import Analytics from '@/components/Analytics.astro'
 import '@/styles/global.css'
 import { Font } from 'astro:assets'
 import { ClientRouter } from 'astro:transitions'
@@ -19,28 +16,20 @@ interface Props {
 	image?: string
 }
 
+const locale = Astro.currentLocale as Lang
 const siteUrl = Astro.site
 const canonicalURL = new URL(Astro.url.pathname, siteUrl)
 const { title, description, keywords, image } = Astro.props
-const locale = Astro.currentLocale as Lang
-const localeTitle = title ? `${title} - ${t(SITE_TITLE)}` : t(SITE_TITLE)
-const localeDescription = description || t(SITE_DESCRIPTION)
-const localeKeywords = keywords
-	? `${t(SITE_KEYWORDS)}, ${keywords}`
-	: t(SITE_KEYWORDS)
-const ogImage = image
-	? `${SITE_BASE}/open-graph/${image}.jpg`
-	: `${SITE_BASE}/open-graph/${locale}/og.png`
 ---
 
-<!-- Global Metadata -->
+{/* Global Metadata */}
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="generator" content={Astro.generator} />
 
-<!-- Locales Paths -->
 {
 	/*
+	<!-- Locales Paths -->
 	getLocalePaths(Astro.url).map((props) => (
 		<link
 			rel="alternate"
@@ -51,50 +40,19 @@ const ogImage = image
  */
 }
 
-<!-- Favicons -->
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<!-- <link rel="shortcut icon" href="/favicon.ico" /> -->
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<meta name="apple-mobile-web-app-title" content="P Blog" />
-<link rel="manifest" href="/site.webmanifest" />
+<Favicons />
 
-<!-- Canonical URL -->
+{/* Canonical URL */}
 <link rel="canonical" href={canonicalURL} />
 
-<!-- Primary Meta Tags -->
-<title>{localeTitle}</title>
-<meta name="title" content={localeTitle} />
-<meta name="description" content={localeDescription} />
-<meta name="keywords" content={localeKeywords} />
-<meta name="author" content="Pablo Portas López" />
-<link type="text/plain" rel="author" href="/humans.txt" />
+<OpenGraph
+	title={title}
+	description={description}
+	keywords={keywords}
+	image={image}
+/>
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content={Astro.url} />
-<meta property="og:title" content={localeTitle} />
-<meta property="og:site_name" content={t(SITE_TITLE)} />
-<meta property="og:description" content={localeDescription} />
-<meta property="og:image" content={new URL(ogImage, Astro.url)} />
-<meta property="og:locale" content={LOCALES[locale]?.lang || locale} />
-{/*
-<meta property="og:locale:alternate" content="es_ES" />
-<meta property="og:locale:alternate" content="gl_ES" />
-<meta property="og:locale:alternate" content="en_GB" />
-*/}
-
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:domain" content={Astro.site?.host} />
-<meta property="twitter:url" content={Astro.url} />
-<meta property="twitter:title" content={localeTitle} />
-<meta property="twitter:description" content={localeDescription} />
-<meta property="twitter:image" content={new URL(ogImage, Astro.url)} />
-<meta name="twitter:site" content={`@${t(X_ACCOUNT)}`} />
-<meta name="twitter:creator" content={`@${t(X_ACCOUNT)}`} />
-
-<!-- Auto-discovery -->
+{/* Auto-discovery */}
 <link rel="sitemap" href="/sitemap-index.xml" />
 <link
 	rel="alternate"
@@ -103,7 +61,9 @@ const ogImage = image
 	href={new URL(`${locale}/rss.xml`, Astro.site)}
 />
 
-<!-- Fonts -->
+<Analytics />
+
+{/* Fonts */}
 <Font
 	cssVariable="--font-merriweather"
 	preload={[{ subset: 'latin', style: 'normal' }, { weight: '700' }]}
@@ -117,5 +77,5 @@ const ogImage = image
 	preload={[{ subset: 'latin', style: 'normal' }, { weight: '400' }]}
 />
 
-<!-- View Transitions -->
+{/* View Transitions */}
 <ClientRouter />
