fix: some minor tailwind warnings

--- a/src/pages/[lang]/locale.astro
+++ b/src/pages/[lang]/locale.astro
@@ -21,7 +21,7 @@ export const getStaticPaths = () =>
 		<h1 class="pb-8 font-serif text-6xl font-bold">
 			{t({ es: 'Elige Idioma', gl: 'Escolle Idioma', en: 'Choose Language' })}
 		</h1>
-		<p class="text-lg leading-[2rem]">
+		<p class="text-lg leading-8">
 			{
 				t({
 					es: 'Dicen que escribir en varios idiomas es bueno para el cerebro y que en cada idioma que hablas tienes una personalidad. No sé si nada de eso es verdad, pero mi blog esta en los tres idioma que domino.',
