--- a/src/pages/[lang]/posts/index.astro
+++ b/src/pages/[lang]/posts/index.astro
@@ -45,7 +45,7 @@ const tags = [
 		<h1 class="pb-8 font-serif text-6xl font-bold">
 			{t({ es: 'Artículos', gl: 'Artigos', en: 'Posts' })}
 		</h1>
-		<p class="text-lg leading-[2rem] md:w-2/3">
+		<p class="text-lg leading-8 md:w-2/3">
 			{
 				t({
 					es: 'escribo cosas y las publico, a veces, hasta pienso antes de escribirlas',
@@ -71,7 +71,7 @@ const tags = [
 				}
 				-->
 			</div>
-			<div class="flex-grow"></div>
+			<div class="grow"></div>
 			<div>
 				{posts.length}
 				{
