feat: add ahrefs analytics

--- a/src/components/Analytics.astro
+++ b/src/components/Analytics.astro
@@ -11,3 +11,9 @@ const locale = Astro.currentLocale
 	data-domains="blog.pablopl.dev"
 	data-tag={`blog-${locale}`}></script>
 
+<script
+	is:inline
+	data-astro-rerun
+	src="https://analytics.ahrefs.com/analytics.js"
+	data-key="41AHUOkOrsmT26f+Ow8zaQ"
+	async></script>
