fix: image without border for a second in blog cards

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -30,7 +30,7 @@ const coverImagePath = `/src/assets/blogimages/${post.data.pubId}/cover.jpg`
 					formats={['avif', 'webp', 'jpg']}
 					priority
 					layout="constrained"
-					class="relative aspect-video object-cover transition-transform duration-200 group-hover:scale-110"
+					class="relative aspect-video rounded-xl object-cover transition-transform duration-200 group-hover:scale-110"
 					transition:name={`blog-cover-${post.data.pubId}`}
 				/>
 			</div>
