--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,6 @@ const defaultLocale = DEFAULT_LOCALE
 <html lang={DEFAULT_LOCALE}>
 	<head>
 		<meta charset="UTF-8" />
-		<title>redirect...</title>
 		<link rel="sitemap" href="/sitemap-index.xml" />
 		<meta name="generator" content={Astro.generator} />
 		{
@@ -28,7 +27,7 @@ const defaultLocale = DEFAULT_LOCALE
 		}
 
 		<Favicons />
-		<OpenGraph />
+		<OpenGraph title="redirect..." />
 
 		<noscript>
 			<meta
