fix: incorrect path on posts page

--- a/src/pages/[lang]/posts/index.astro
+++ b/src/pages/[lang]/posts/index.astro
@@ -58,7 +58,7 @@ const tags = [
 	<section class="app-container py-12">
 		<h2 class="flex flex-row text-3xl">
 			<div class="flex flex-wrap gap-4">
-				<a class="font-bold" href={`/${locale}/posts`}>
+				<a class="font-bold" href={`/${locale}/posts/`}>
 					{t({ es: 'Todos', gl: 'Todos', en: 'All' })}
 				</a>
 				<!-- tags filter - to be implemented
