--- a/src/pages/[lang]/locale.astro
+++ b/src/pages/[lang]/locale.astro
@@ -12,9 +12,9 @@ export const getStaticPaths = () =>
 <Layout
 	title={t({ es: 'Elige Idioma', gl: 'Escolle Idioma', en: 'Choose Language' })}
 	description={t({
-		es: 'Cambia el idioma del blog. Contenido disponible en tres idiomas para una mejor experiencia de lectura.',
-		gl: 'Cambia o idioma do blog. Contido dispoñible en tres idiomas para unha mellor experiencia de lectura.',
-		en: 'Change the blog language. Content available in three languages for a better reading experience.',
+		es: 'Cambia el idioma del blog. Contenido disponible en mis tres idiomas favoritos para una mejor experiencia de lectura.',
+		gl: 'Cambia o idioma do blog. Contido dispoñible nos meus tres idiomas favoritos para unha mellor experiencia de lectura.',
+		en: 'Change the blog language. Content available in my favourites three languages for a better reading experience.',
 	})}
 >
 	<main class="app-container pt-36">
