feat: update posts page description

--- a/src/pages/[lang]/posts/index.astro
+++ b/src/pages/[lang]/posts/index.astro
@@ -35,9 +35,9 @@ const tags = [
 <Layout
 	title={t({ es: 'Artículos', gl: 'Artigos', en: 'Posts' })}
 	description={t({
-		es: 'escribo cosas y las publico, a veces, hasta pienso antes de escribirlas',
-		gl: 'escribo cousas e publícoas, ás veces, ata penso antes de escribilas',
-		en: 'I write things and publish them, sometimes I even think before writing them',
+		es: 'todos mis brillantes artículos, cosas que escribo cosas y que publico, a veces, hasta pienso antes de escribirlas',
+		gl: 'todos os meus brillantes artigos, cousas que escribo cousas e que publíco, ás veces, ata penso antes de escribilas',
+		en: 'all my brilliant posts, things I write things and publish them, sometimes I even think before writing them',
 	})}
 	lastModified={newArtDate.toISOString()}
 >
