fix: links in translate toggle

--- a/src/components/TranslateToggle.astro
+++ b/src/components/TranslateToggle.astro
@@ -40,7 +40,7 @@ const { pubId } = Astro.props
 					<span>
 						<a
 							class="group item-center flex gap-1"
-							href={`/${lang}/posts/${postPath}`}
+							href={`/${lang}/posts/${postPath}/`}
 							aria-label={t({
 								es: `Traducir al ${config.label}`,
 								gl: `Traducir ao ${config.label}`,
